# SimIL

./: .gitexternals  .gitlab-ci.yml  .gitsubprojects  .jambs_configs.sh  CMakeLists.txt  README.md  TODO.txt
examples/: CMakeLists.txt  InsituExample.cpp  RESTExample.cpp  bcToCsv.cpp  csv.cpp  customPlayerDemo.cpp  dummy_receiver.cpp  loadExample.cpp  loadRefactorExample.cpp  mp2.h  spike_sender.cpp  subset.cpp
examples/cone_conf_files/: shared_memory.json  websocket_client.json  websocket_server.json  zeromq_client.json  zeromq_server.json
qsimil/: CMakeLists.txt  ClickableSlider.h  CustomPlayer.cpp  CustomPlayer.h  CustomSlider.h  ICustomPlayer.h  QCustomPlayer.cpp  QCustomPlayer.h  QSimControlWidget.cpp  QSimControlWidget.h  QSimILWinProps.rc.in  QSimulationPlayer.cpp  QSimulationPlayer.h  resources_cp.qrc
simil/: CMakeLists.txt  CSVActivity.cpp  CSVActivity.h  CSVNetwork.cpp  CSVNetwork.h  CorrelationComputer.cpp  CorrelationComputer.h  DataSet.cpp  DataSet.h  H5Activity.cpp  H5Activity.h  H5Network.cpp  H5Network.h  H5SubsetEvents.cpp  H5SubsetEvents.h  Network.cpp  Network.h  SimILWinProps.rc.in  SimulationData.cpp  SimulationData.h  SimulationPlayer.cpp  SimulationPlayer.h  SpikeData.cpp  SpikeData.h  Spikes.hpp  SpikesPlayer.cpp  SpikesPlayer.h  SubsetEventManager.cpp  SubsetEventManager.h  VoltageData.cpp  VoltageData.h  VoltagesPlayer.cpp  VoltagesPlayer.h  ZeqEventsManager.cpp  ZeqEventsManager.h  ZeroEqEventsManager.cpp  ZeroEqEventsManager.h  log.h  types.h
simil/loaders/: HTTPClient.cpp  HTTPClient.h  HTTPClient.hpp  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPSyncClient.cpp  HTTPSyncClient.h  LoadBlueConfigData.cpp  LoadBlueConfigData.h  LoadCSVData.cpp  LoadCSVData.h  LoadHDF5Data.cpp  LoadHDF5Data.h  LoadInsituData.cpp  LoadInsituData.h  LoadRestApiData.cpp  LoadRestApiData.cpp.autosave  LoadRestApiData.h  LoadSimData.h  LoadblueConfigData.cpp  LoadblueConfigData.h  LoaderBlueConfigData.cpp  LoaderBlueConfigData.h  LoaderCSVData.cpp  LoaderCSVData.h  LoaderHDF5Data.cpp  LoaderHDF5Data.h  LoaderInsituData.cpp  LoaderInsituData.h  LoaderRestData.cpp  LoaderRestData.h  LoaderSimData.h  LoaderSnuddaData.cpp  LoaderSnuddaData.h
simil/loaders/HTTP/: SyncClient.cpp  SyncClient.h
simil/loaders/aux/: CSVNetwork.cpp  CSVNetwork.h  H5Activity.cpp  H5Activity.h  H5Network.h  H5SubsetEvents.cpp
simil/loaders/auxiliar/: CSVActivity.cpp  CSVActivity.h  CSVNetwork.cpp  CSVNetwork.h  H5Activity.cpp  H5Activity.h  H5Morphologies.cpp  H5Morphologies.h  H5Network.cpp  H5Network.h  H5SubsetEvents.cpp  H5SubsetEvents.h
simil/loaders/jsoncpp/: jsoncpp.cpp
